crates/executor/src/tests/snapshots/query_describe_table.snap
---
source: crates/executor/src/tests/query.rs
description: "\"DESCRIBE TABLE employee_table\""
---
Ok(
    [
        "+---------------+-------+-------+",
        "| name          | type  | null? |",
        "+---------------+-------+-------+",
        "| employee_id   | FIXED | YES   |",
        "| last_name     | TEXT  | YES   |",
        "| first_name    | TEXT  | YES   |",
        "| department_id | FIXED | YES   |",
        "+---------------+-------+-------+",
    ],
)
